Add images to recipes and create "images" folder
Images added to the recipe pages

--- a/recipes/pandesal.html
+++ b/recipes/pandesal.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Pandesal</h1>
+
+    <img src="../images/pandesal.jpg" alt="Pandesal" height="310" width="310">
+
 </body>
 </html>
