--- a/recipes/wontons.html
+++ b/recipes/wontons.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Wontons</h1>
-</body>
+
+    <img src="../images/wontons.jpg" alt="Wontons in pot with sauce" height="310" width="310">
+    
+ </body>
 </html>
