--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/chocolateChipCookies.html">Chocolate Chip Cookies</a>> 
-    <a href="recipes/pandesal.html">Pandesal</a>
-    <a href="recipes/wontons.html">Wontons</a>
+    <ul>
+        <li><a href="recipes/chocolateChipCookies.html">Chocolate Chip Cookies</a></li>
+        <li></p><a href="recipes/pandesal.html">Pandesal</a></li>
+        <li></p><a href="recipes/wontons.html">Wontons</a></li>
+    </ul>
+   
 
 </body>
 </html>
