--- a/recipes/chocolateChipCookies.html
+++ b/recipes/chocolateChipCookies.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Chocolate Chip Cookies</h1>
 
+    <img src="../images/chocolateChipCookies.jpg" alt="Chocolate Chip Cookies" height="310" width="310">
 </body>
 </html>
