Body to recipes
Added lists for ingredientsa and instructions into recipe pages

--- a/recipes/chocolateChipCookies.html
+++ b/recipes/chocolateChipCookies.html
@@ -7,7 +7,42 @@
 </head>
 <body>
     <h1>Chocolate Chip Cookies</h1>
+    
+    <div id="intro">
+        <p>This recipe will show you how to make the most exquisite and delicious chocolate chip cookies of your entire life that are to die for!!!</p>
 
-    <img src="../images/chocolateChipCookies.jpg" alt="Chocolate Chip Cookies" height="310" width="310">
+    </div>
+
+    <img src="../images/chocolateChipCookies.jpg" alt="Chocolate Chip Cookies" height="310" width="310"></p>    
+
+    <div id="ingredients">
+        <h2>Ingredients</h2>
+        
+        <ul>
+            <li>Flour</li>
+            <li>Eggs</li>
+            <li>Brown sugar</li>
+            <li>Chocolate chips</li>
+        </ul>
+    </div>
+
+    <div id="instructions">
+        <h2>Instructions</h2>
+
+        <ol>
+            <li>In one large bowl, mix in the flour, sugar, baking soda, and chocolate chips</li>
+            <li>Once mixed in, pour in the melted butter, eggs, and vanilla extract</li>
+            <li>Mix further untill the batter gets thicker and all ingredients are incorporated</li>
+            <li>Refrigerate overnight</li>
+            <li>Preheat the oven to 300 degrees Celsius</li>
+            <li>Make cylindrical balls of cookie dough using an ice cream scoop</li>
+            <li>Place the shaped dough onto a baking tray lined with parchment paper</li>
+            <li>Cook for 8-10 minutes or untill the edges of the cookies are slightly brown and the inner section is golden</li>
+            <li>Remove from the oven and let cool on a cooling rack for 15 minutes</li>
+        </ol>
+
+    </div>
+
+    <a href="../index.html">Return</a>
 </body>
 </html>
