--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="header1" >Odin Recipes</h1>
+    
+    
+    <div>
+        <ul>
+            <li><a href="recipes/chocolateChipCookies.html">Chocolate Chip Cookies</a></li>
+            <li></p><a href="recipes/pandesal.html">Pandesal</a></li>
+            <li></p><a href="recipes/wontons.html">Wontons</a></li>
+        </ul>
+    </div>  
 
-    <ul>
-        <li><a href="recipes/chocolateChipCookies.html">Chocolate Chip Cookies</a></li>
-        <li></p><a href="recipes/pandesal.html">Pandesal</a></li>
-        <li></p><a href="recipes/wontons.html">Wontons</a></li>
-    </ul>
-   
+    <a href="#header1">Top</a>
 
 </body>
 </html>
